Kubernetes/Deployments.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monetary
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: monetary
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      imagePullSecrets:
        - name: dockerhub-cred
      containers:
        - name: frontend
          image: docker.io/antriksh4learninig/portfolio:latest-f
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "128Mi"
              cpu: "200m"
            limits:
              memory: "256Mi"
              cpu: "400m"
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: monetary
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-api
  namespace: monetary
  labels:
    app: admin-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-api
  template:
    metadata:
      labels:
        app: admin-api
    spec:
      imagePullSecrets:
        - name: dockerhub-cred
      containers:
        - name: admin-api
          image: docker.io/antriksh4learninig/portfolio:latest-s1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "128Mi"
              cpu: "200m"
            limits:
              memory: "256Mi"
              cpu: "400m"
---
apiVersion: v1
kind: Service
metadata:
  name: admin-api
  namespace: monetary
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: admin-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: features-api
  namespace: monetary
  labels:
    app: features-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: features-api
  template:
    metadata:
      labels:
        app: features-api
    spec:
      imagePullSecrets:
        - name: dockerhub-cred
      containers:
        - name: features-api
          image: docker.io/antriksh4learninig/portfolio:latest-s2
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "128Mi"
              cpu: "200m"
            limits:
              memory: "256Mi"
              cpu: "400m"
---
apiVersion: v1
kind: Service
metadata:
  name: features-api
  namespace: monetary
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: features-api
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monetary-ingress
  namespace: monetary
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - monetary.antriksh.site
      secretName: ssl
  rules:
    - host: monetary.antriksh.site
      http:
        paths:
          - path: /api/admin
            pathType: Prefix
            backend:
              service:
                name: admin-api
                port:
                  number: 80
          - path: /api/features
            pathType: Prefix
            backend:
              service:
                name: features-api
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
